[gd_scene load_steps=10 format=3 uid="uid://bd2li6d7m084y"]

[ext_resource type="Script" path="res://Scripts/Life_spiky_grass.gd" id="1_6y67d"]
[ext_resource type="Texture2D" uid="uid://ca7scia4d8ogq" path="res://Art/spiky_grass_0.png" id="2_kqq52"]
[ext_resource type="Texture2D" uid="uid://blm537rpfx3gm" path="res://Art/spiky_flower.png" id="3_6by78"]
[ext_resource type="Texture2D" uid="uid://clv2dt253r3n" path="res://Art/spiky_grass_1.png" id="4_idtlg"]
[ext_resource type="Texture2D" uid="uid://cxknvht080h0u" path="res://Art/spiky_grass_2.png" id="5_cjj12"]
[ext_resource type="Texture2D" uid="uid://bhfpugerkdv6e" path="res://Art/poop_star_0.png" id="6_rtytl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dldvs"]
size = Vector2(32, 64)

[node name="Spiky_grass" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
script = ExtResource("1_6y67d")

[node name="Timer" type="Timer" parent="."]

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Sprite_0" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_kqq52")
centered = false
offset = Vector2(0, -32)

[node name="Sprite_flower" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_6by78")
centered = false

[node name="Sprite_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_idtlg")
centered = false
offset = Vector2(0, -64)

[node name="Sprite_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_cjj12")
centered = false
offset = Vector2(0, -96)

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_rtytl")
centered = false

[node name="DebugLabel" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="Collision_0" type="CollisionShape2D" parent="."]
position = Vector2(16, -16)
shape = SubResource("RectangleShape2D_dv5i7")

[node name="Collision_1" type="CollisionShape2D" parent="."]
position = Vector2(16, -32)
shape = SubResource("RectangleShape2D_dldvs")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
